added Page Header

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,2 +1,13 @@
 @use './vars' as *;
 
+body {
+    font-family: 'Passion One', sans-serif;
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
